--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   font-family: Arial;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -10,15 +10,17 @@
 }
 
 .App-header {
-  padding: 20px;
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  width: 100%;
+  padding: 30px;
+  background-color: white;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  width: 600px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .App-header h1 {
-  color: #4285F4;
+  color: #007BFF;
 }
 
 .language-selection {
@@ -30,30 +32,34 @@
 }
 
 .language-dropdown, .input-text, .output-text, .translate-button, .swap-button {
-  width: 45%;
-  height: 40px;
-  font-size: 16px;
-  border-radius: 5px;
+  width: 96%;
+  height: 50px;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid #ddd;
 }
 
 .swap-button, .translate-button {
-  width: 20%;
-  background-color: #4285F4;
+  width: 100%;
+  padding: 15px;
+  background-color: #007BFF;
   color: white;
   border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .translate-button:hover, .swap-button:hover {
-  background-color: #0053ba;
+  background-color: #0056b3;
 }
 
 .translate-button {
   margin-bottom: 10px;
 }
+
 .input-text, .output-text {
-  width: 96%;
   margin-bottom: 20px;
-  padding: 10px;
 }
 
 .output-text {
@@ -71,20 +77,67 @@
 .history-table {
   width: 100%;
   border-collapse: collapse;
+  background-color: white; 
 }
 
 .history-table th, .history-table td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: center;
-
 }
 
 .history-table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4285F4;
+  background-color: #007BFF;
   color: white;
+  text-align: center;
+}
+
+.history-table tr:nth-child(even) {background-color: #f2f2f2;} /* Add zebra-striping to the table rows */
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
+
+.login-box {
+  width: 300px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+  border-radius: 8px;
+}
+
+.input-group {
+  margin-bottom: 10px;
+}
+
+.input-group input {
+  width: 90%; /* Increase the width */
+  padding: 15px; /* Increase the padding */
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.login-button {
+  width: 100%;
+  padding: 15px; /* Increase the padding */
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  background-color: #0056b3;
+}
+
+.login-title {
   text-align: center;
 }
